crates/apollo_storage/src/serialization/snapshots/apollo_storage__serialization__serializers_test__hints_regression_hint_1048.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 4
- 24
- 1
- 6
- 0
- 0
- 0
- 0
- 0
- 0
